--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,4 @@
+/*This is the base style sheet that formats the titles and the buttons*/
 .title {
   font-family: 'Trocchi', serif;
   color: #7c795d;
